--- a/SolarSystem/Visualization/MainWindow.xaml
+++ b/SolarSystem/Visualization/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="1000">
     <Grid>
-        <Canvas Margin="0,0,300,0" Background="Black"/>
+        <Canvas x:Name="spaceCanvas" Margin="0,0,200,0" Background="Black"/>
     </Grid>
 </Window>
