--- a/SolarSystem/Visualization/MainWindow.xaml
+++ b/SolarSystem/Visualization/MainWindow.xaml
@@ -9,14 +9,14 @@
     <Grid x:Name="spaceGrid" Background="Black">
         <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" OverridesDefaultStyle="True">
             <!--<Viewbox Grid.Row="1" HorizontalAlignment="Left"  MaxHeight="1000">-->
-            <Canvas x:Name="spaceCanvas" Height="6200" Grid.IsSharedSizeScope="True" Width="6200" ScrollViewer.CanContentScroll="True" Background="Black"/>
+            <Canvas x:Name="spaceCanvas" Height="6200" Grid.IsSharedSizeScope="True" Width="6200" ScrollViewer.CanContentScroll="True"/>
             <!--</Viewbox>-->
         </ScrollViewer>
         <GroupBox x:Name="groupBox" Header="" HorizontalAlignment="Right" Margin="0,50,50,0" VerticalAlignment="Top" Height="493" Width="200">
             <Grid HorizontalAlignment="Left" Height="473" VerticalAlignment="Top" Width="200" Margin="0,0,-12,-2">
                 <Button x:Name="startButton" Content="Start" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Click="startButton_Click" Margin="0,20,60,0"/>
                 <Button x:Name="pauseButton" Content="Pause" HorizontalAlignment="Right" Margin="0,80,60,0" VerticalAlignment="Top" Width="75" Click="pauseButton_Click"/>
-                <Slider x:Name="slider" HorizontalAlignment="Right" Margin="0,155,40,0" VerticalAlignment="Top" Width="118" SmallChange="0.01" SnapsToDevicePixels="True" ValueChanged="slider_ValueChanged" RenderTransformOrigin="0.5,0.5" Minimum="0.01" TickPlacement="BottomRight" TickFrequency="0.01" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" Maximum="5"/>
+                <Slider x:Name="slider" HorizontalAlignment="Right" Margin="0,155,40,0" VerticalAlignment="Top" Width="118" SmallChange="0.01" SnapsToDevicePixels="True" ValueChanged="slider_ValueChanged" RenderTransformOrigin="0.5,0.5" Minimum="0.5" TickPlacement="BottomRight" TickFrequency="0.01" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" Maximum="5"/>
                 <Button x:Name="zoomButton" Content="Zoom" HorizontalAlignment="Right" Margin="0,205,80,0" VerticalAlignment="Top" Click="zoomButton_Clicked"/>
                 <Label x:Name="labelSlider" Content="Seconds per month:" HorizontalAlignment="Left" Margin="40,130,0,0" VerticalAlignment="Top" Width="118" Foreground="White"/>
                 <CheckBox x:Name="showTrajectoryCheckBox" Content="Show trajectory" HorizontalAlignment="Left" Margin="40,260,0,0" VerticalAlignment="Top" Width="118" Checked="showTrajectoryCheckBox_Checked" Unchecked="showTrajectoryCheckBox_Unchecked" IsChecked="True" Foreground="White"/>
